# sidex

./: .gitignore  Cargo.toml  DEVELOPMENT_PLAN.md  EXTENSION_API_COVERAGE.md  TASK_LIST.md  TEST_PLAN.md  TEST_SUMMARY.md  TODO.md  agent.md  eslint.config.js  index.html  package-lock.json  package.json  rule.md  standalone_test_runner.rs  tsconfig.json  vite.config.ts
crates/sidex-app/: Cargo.toml
crates/sidex-app/src/: app.rs  backup.rs  cli.rs  clipboard.rs  command_palette.rs  commands.rs  crash_reporter.rs  document_state.rs  editor_group.rs  editor_view.rs  event_bus.rs  event_loop.rs  file_dialog.rs  i18n.rs  input.rs  layout.rs  lib.rs  logging.rs  main.rs  native.rs  native_menu.rs  navigation.rs  performance.rs  platform.rs  product.rs  quick_open.rs  recent.rs  services.rs  session.rs  startup.rs  status_bar_controller.rs  symbol_navigation.rs  tauri_bridge.rs  telemetry.rs  test_runner.rs  title_bar.rs  updater.rs  window_manager.rs  zoom.rs
crates/sidex-app/tests/: integration_test.rs
crates/sidex-auth/: Cargo.toml
crates/sidex-auth/src/: storage.rs
crates/sidex-dap/: Cargo.toml
crates/sidex-dap/src/: adapter.rs  client.rs  launch_config.rs  lib.rs  protocol.rs  session.rs  transport.rs
crates/sidex-editor/: Cargo.toml
crates/sidex-editor/src/: cursors.rs  document.rs  editing.rs  lib.rs  scroll.rs  snippet.rs  undo.rs  viewport.rs
crates/sidex-editor/src/contrib/: auto_close.rs  auto_indent.rs  bookmarks.rs  bracket_matching.rs  bracket_pair_colorization.rs  breadcrumbs.rs  breakpoints.rs  clipboard_operations.rs  code_action.rs  code_action_widget.rs  codelens.rs  color_decorators.rs  color_picker.rs  comment.rs  conflict_decorations.rs  coverage.rs  diagnostics.rs  emmet.rs  error_navigation.rs  find.rs  find_widget.rs  folding.rs  formatting.rs  git_blame.rs  git_decorations.rs  go_to_line.rs  hover.rs  image_preview.rs  indent_guide.rs  inlay_hints.rs  inline_diff.rs  inline_suggest.rs  json_features.rs  lines_operations.rs  linked_editing.rs  local_history.rs  markdown_preview.rs  mod.rs  (+19 more)
crates/sidex-extension-api/: Cargo.toml
crates/sidex-extension-api/src/: api.rs  commands_api.rs  debug_api.rs  env_api.rs  extension.rs  languages_api.rs  lib.rs  message_handler.rs  scm_api.rs  tasks_api.rs  test_api.rs  types.rs  window.rs  workspace_api.rs
crates/sidex-keymap/: Cargo.toml
crates/sidex-keymap/src/: context.rs  defaults.rs  keybinding.rs  keyboard_shortcut_editor.rs  layout.rs  lib.rs  resolver.rs
crates/sidex-syntax/: Cargo.toml
crates/sidex-syntax/src/: highlight.rs  language.rs  lib.rs  scope_resolver.rs  semantic_tokens.rs  textmate.rs  tree_sitter_parser.rs
crates/sidex-tasks/: Cargo.toml
crates/sidex-tasks/src/: cargo_task_provider.rs  lib.rs  make_task_provider.rs  npm_task_provider.rs  problem_matcher.rs  runner.rs  task.rs  tasks_json.rs
crates/sidex-terminal/: Cargo.toml
crates/sidex-terminal/src/: ansi.rs  emulator.rs  exec.rs  find.rs  grid.rs  lib.rs  link_detection.rs  manager.rs  pty.rs  renderer.rs  selection.rs  shell.rs  shell_integration.rs
crates/sidex-ui/: Cargo.toml
crates/sidex-ui/src/: accessibility.rs  animation.rs  drag_drop.rs  draw.rs  focus.rs  icons.rs  layout.rs  lib.rs  widget.rs
crates/sidex-update/: Cargo.toml
crates/sidex-update/src/: install.rs  manager.rs
crates/sidex-workspace/: Cargo.toml
crates/sidex-workspace/src/: dirty_diff.rs  file_associations.rs  file_decorations.rs  file_operations.rs  file_tree.rs  file_watcher_events.rs  fuzzy_file_finder.rs  index.rs  lib.rs  multi_root.rs  outline.rs  path_util.rs  search.rs  timeline.rs  trust.rs  watcher.rs
extensions-rust/: Cargo.toml
extensions-rust/debug-auto-launch-extension/: Cargo.toml  sidex.toml
extensions-rust/debug-auto-launch-extension/src/: lib.rs
extensions-rust/debug-server-ready-extension/: Cargo.toml  sidex.toml
extensions-rust/debug-server-ready-extension/src/: lib.rs
extensions-rust/emmet-extension/: Cargo.toml  sidex.toml
extensions-rust/emmet-extension/src/: lib.rs
extensions-rust/git-extension/: Cargo.toml  sidex.toml
extensions-rust/git-extension/src/: lib.rs
extensions-rust/grunt-extension/: Cargo.toml  sidex.toml
extensions-rust/grunt-extension/src/: lib.rs
extensions-rust/gulp-extension/: Cargo.toml  sidex.toml
extensions-rust/gulp-extension/src/: lib.rs
extensions-rust/html-language-extension/: Cargo.toml  sidex.toml
extensions-rust/html-language-extension/src/: lib.rs
extensions-rust/jake-extension/: Cargo.toml  sidex.toml
extensions-rust/jake-extension/src/: lib.rs
extensions-rust/json-language-extension/: Cargo.toml  sidex.toml
extensions-rust/json-language-extension/src/: lib.rs
extensions-rust/markdown-extension/: Cargo.toml  sidex.toml
extensions-rust/markdown-extension/src/: lib.rs
extensions-rust/merge-conflict-extension/: Cargo.toml  sidex.toml
extensions-rust/merge-conflict-extension/src/: lib.rs
extensions-rust/npm-extension/: Cargo.toml  sidex.toml
extensions-rust/npm-extension/src/: lib.rs
extensions-rust/php-language-extension/: Cargo.toml  sidex.toml
extensions-rust/php-language-extension/src/: lib.rs
extensions-rust/references-view-extension/: Cargo.toml  sidex.toml
extensions-rust/references-view-extension/src/: lib.rs
extensions-rust/terminal-suggest-extension/: Cargo.toml  sidex.toml
extensions-rust/terminal-suggest-extension/src/: lib.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.sidex-ui.conf.json
src-tauri/capabilities/: default.json
src-tauri/extension-host/: host.cjs
src-tauri/src/: lib.rs  standalone_tests.rs
src-tauri/src/commands/: content_tracing.rs  db_state.rs  debug.rs  editor.rs  ext_api.rs  extension_diagnostics.rs  extension_platform.rs  extension_wasm.rs  extensions.rs  fs.rs  fs_test.rs  git.rs  git_test.rs  keymap.rs  lsp.rs  menu.rs  mod.rs  power.rs  process.rs  proxy.rs  remote.rs  search.rs  search_test.rs  secrets.rs  settings.rs  sidex_terminal.rs  storage.rs  syntax.rs  tasks.rs  terminal_test.rs  text.rs  text_test.rs  textmate.rs  theme.rs  validation.rs  watch.rs  window.rs
(+1114 files in other folders)
