[workspace]
resolver = "2"
members = [
  "crates/sidex-text",
  "crates/sidex-syntax",
  "crates/sidex-lsp",
  "crates/sidex-workspace",
  "crates/sidex-terminal",
  "crates/sidex-git",
  "crates/sidex-extensions",
  "crates/sidex-extension-api",
  "crates/sidex-theme",
  "crates/sidex-keymap",
  "crates/sidex-settings",
  "crates/sidex-db",
  "crates/sidex-remote",
  "crates/sidex-dap",
  "crates/sidex-tasks",
  "crates/sidex-update",
  "crates/sidex-profiles",
  "crates/sidex-auth",
  "crates/sidex-textmate",
  "src-tauri",
  "sidex-extension-sdk",
]
exclude = ["extensions-rust"]

[workspace.package]
version = "0.2.0"
edition = "2021"
rust-version = "1.91.0"
license = "MIT"
repository = "https://github.com/sidenai/sidex"

[workspace.dependencies]
# Internal crates
sidex-text = { path = "crates/sidex-text" }
sidex-syntax = { path = "crates/sidex-syntax" }
sidex-lsp = { path = "crates/sidex-lsp" }
sidex-workspace = { path = "crates/sidex-workspace" }
sidex-terminal = { path = "crates/sidex-terminal" }
sidex-git = { path = "crates/sidex-git" }
sidex-extensions = { path = "crates/sidex-extensions" }
sidex-extension-api = { path = "crates/sidex-extension-api" }
sidex-theme = { path = "crates/sidex-theme" }
sidex-keymap = { path = "crates/sidex-keymap" }
sidex-settings = { path = "crates/sidex-settings" }
sidex-db = { path = "crates/sidex-db" }
sidex-remote = { path = "crates/sidex-remote" }
sidex-extension-sdk = { path = "sidex-extension-sdk" }
sidex-tasks = { path = "crates/sidex-tasks" }
sidex-dap = { path = "crates/sidex-dap" }
sidex-update = { path = "crates/sidex-update" }
sidex-profiles = { path = "crates/sidex-profiles" }
sidex-auth = { path = "crates/sidex-auth" }
sidex-textmate = { path = "crates/sidex-textmate" }

# Core
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"

# Text
ropey = "1"
unicode-segmentation = "1"
unicode-width = "0.2"
regex = "1"
memchr = "2"

# Syntax & Language
tree-sitter = "0.24"

# File system
notify = { version = "7", features = ["macos_fsevent"] }
walkdir = "2"
globset = "0.4"
ignore = "0.4"

# Terminal
portable-pty = "0.8"
vte = "0.13"

# Git
gix = { version = "0.68", default-features = false }

# Database
rusqlite = { version = "0.31", features = ["bundled", "backup"] }

# Remote
russh = "0.46"
bollard = "0.18"
tokio-tungstenite = "0.26"

# HTTP
reqwest = { version = "0.12", features = ["rustls-tls"] }

# Concurrency
crossbeam = "0.8"
dashmap = "6"
rayon = "1"
parking_lot = "0.12"

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
correctness = { level = "deny", priority = -1 }
complexity = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
dbg_macro = "warn"
todo = "warn"
unimplemented = "warn"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
