[workspace]
resolver = "2"
members = [
  "grunt-extension",
  "gulp-extension",
  "jake-extension",
  "merge-conflict-extension",
  "debug-auto-launch-extension",
  "debug-server-ready-extension",
  "php-language-extension",
  "references-view-extension",
  "json-language-extension",
  "emmet-extension",
  "npm-extension",
  "markdown-extension",
  "css-language-extension",
  "html-language-extension",
  "typescript-language-extension",
  "git-extension",
  "terminal-suggest-extension",
  "rust-language-extension",
  "go-language-extension",
  "cpp-language-extension",
  "python-language-extension",
]

[workspace.dependencies]
sidex-extension-sdk = { path = "../sidex-extension-sdk" }
wit-bindgen = "0.41"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
