[package]
name = "sidex"
version = "0.1.3"
description = "SideX - A fast, open-source code editor"
authors = ["Siden Technologies Inc"]
license = "MIT"
repository = "https://github.com/sidenai/sidex"
edition = "2021"
rust-version = "1.91.0"

[[bin]]
name = "SideX"
path = "src/main.rs"

[lib]
name = "sidex_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
tauri = { version = "2.10.3", features = [
  "protocol-asset",
  "tray-icon",
  "devtools",
] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
notify = { version = "7", features = ["macos_fsevent"] }
portable-pty = "0.8"
walkdir = "2"
rusqlite = { version = "0.31", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
hostname = "0.4"
dirs = "5"
reqwest = { version = "0.12", features = [
  "rustls-tls",
  "blocking",
  "gzip",
  "deflate",
  "brotli",
] }

# Platform-specific dependencies
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
  "Win32_System_Power",
  "Win32_System_Threading",
] }

# Compression & encoding
flate2 = "1"
zip = "2"
base64 = "0.22"

# Crypto
sha2 = "0.10"
md5 = "0.7"
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
chrono = "0.4"

# Path utilities
pathdiff = "0.2"
glob = "0.3"
globset = "0.4"

# Search indexing
dashmap = "6"
rayon = "1.10"
regex = "1"
memchr = "2"

# Process & terminal management
crossbeam = "0.8"
which = "6"

# Extension API helpers
arboard = "3"
open = "5"
url = "2"

# WASM extension runtime
wasmtime = { version = "43", default-features = false, features = [
  "runtime",
  "component-model",
  "cranelift",
  "async",
] }
wasmtime-wasi = "43"
toml = "0.8"
anyhow = "1"
sidex-db = { path = "../crates/sidex-db" }
sidex-dap = { path = "../crates/sidex-dap" }
sidex-remote = { path = "../crates/sidex-remote" }
sidex-settings = { path = "../crates/sidex-settings" }
sidex-theme = { path = "../crates/sidex-theme" }

# SideX crates
sidex-git = { path = "../crates/sidex-git" }
sidex-workspace = { path = "../crates/sidex-workspace" }

# Internal crates
sidex-text = { path = "../crates/sidex-text" }
sidex-syntax = { path = "../crates/sidex-syntax" }
sidex-tasks = { path = "../crates/sidex-tasks" }
sidex-extensions = { path = "../crates/sidex-extensions" }
sidex-terminal = { path = "../crates/sidex-terminal" }
sidex-lsp = { path = "../crates/sidex-lsp" }
sidex-keymap = { path = "../crates/sidex-keymap" }
sidex-extension-api = { path = "../crates/sidex-extension-api" }
sidex-update = { path = "../crates/sidex-update" }
sidex-profiles = { path = "../crates/sidex-profiles" }
sidex-auth = { path = "../crates/sidex-auth" }
sidex-textmate = { path = "../crates/sidex-textmate" }

tree-sitter = "0.24"
tree-sitter-rust = "0.23"
urlencoding = "2.1.3"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
correctness = { level = "deny", priority = -1 }
complexity = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
dbg_macro = "warn"
todo = "warn"
unimplemented = "warn"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
