[package]
name = "sidex-auth"
description = "Authentication primitives for SideX: OS keyring secret storage, OAuth flows."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = "0.4"
keyring = { version = "3", features = [
  "apple-native",
  "windows-native",
  "sync-secret-service",
] }
rusqlite = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
