[package]
name = "sidex-editor"
description = "Editor core — cursor, selection, undo/redo, and edit operations for SideX"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
sidex-text = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
