[package]
name = "sidex-extension-api"
description = "VS Code extension API compatibility layer for SideX"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
log = "0.4"
uuid = { version = "1", features = ["v4"] }
sidex-extensions = { path = "../sidex-extensions" }

[lints]
workspace = true
