[package]
name = "sidex-syntax"
description = "Syntax highlighting and parsing for SideX via tree-sitter and TextMate grammars"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
sidex-text = { workspace = true }
tree-sitter = { workspace = true }
streaming-iterator = "0.1"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = "2"
log = "0.4"
once_cell = "1"
regex = { workspace = true }
fancy-regex = "0.14"
plist = "1"
bitflags = { version = "2", features = ["serde"] }

[dev-dependencies]
tree-sitter-rust = "0.23"

[lints]
workspace = true
