[package]
name = "sidex-tasks"
description = "Task runner for SideX — npm scripts, make, custom tasks"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = "2"
log = "0.4"
regex = { workspace = true }

[lints]
workspace = true
