[package]
name = "sidex-terminal"
description = "Terminal emulator and PTY management for SideX"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
portable-pty = { workspace = true }
vte = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
crossbeam = { workspace = true }
regex = { workspace = true }
bitflags = "2"
thiserror = "2"
log = "0.4"
which = "7"
dirs = "6"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
