[package]
name = "sidex-ui"
description = "UI framework and widget library for SideX"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
sidex-gpu = { workspace = true }
sidex-theme = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
regex = { workspace = true }
thiserror = "2"
log = "0.4"

[lints]
workspace = true
