[package]
name = "sidex-workspace"
description = "Workspace management — file tree, watcher, search for SideX"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sidex-theme = { workspace = true }
notify = { workspace = true }
walkdir = { workspace = true }
globset = { workspace = true }
ignore = { workspace = true }
memchr = { workspace = true }
regex = { workspace = true }
dashmap = { workspace = true }
rayon = { workspace = true }
anyhow = { workspace = true }
thiserror = "2"
log = "0.4"
pathdiff = "0.2"
glob = "0.3"
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
